--- a/styles.css
+++ b/styles.css
@@ -53,7 +53,8 @@ body {
     gap: 20px;
     font-size: 14px;
     color: #222;
-    margin: 10px;
+    margin-top: 2px;
+    margin-bottom: 0px;
 }
 
 .black-border {
@@ -68,10 +69,10 @@ body {
     width: 100%;
     top: 0;
     background-color: #fe2825;
-    padding-top: 0px;
+    padding-top: 5px;
 }
 
-.diamond {
+.stars {
     font-size: 30px;
 }
 
@@ -85,4 +86,47 @@ body {
     width: 800px;
     margin: 8vh;
     margin-right: 7vw;
+}
+
+.menu-box {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 33vw;
+    height: 33vw;
+    border-color: #222;
+    border-width: 2px;
+    border-style: solid;
+    border-radius: 20px;
+    padding: 5vw;
+    gap: 3vh;
+    text-align: center;
+}
+
+.our-menus {
+    font-size: 35px;
+    margin-top: 6vh;
+}
+
+.menu-image {
+    background-color: black;
+    width: 43vw;
+    height: 43vw;
+    border-color: #222;
+    border-width: 2px;
+    border-style: solid;
+    border-radius: 20px;
+}
+
+.menu-image-and-box {
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: 8vh;
+    margin-bottom: 6vh;
+    gap: 4vw;
+}
+
+.view-menu {
+    background-color: transparent;
+    font-family: 'Lugrasimo', cursive;
 }
