--- a/styles.css
+++ b/styles.css
@@ -37,13 +37,18 @@ body {
     padding-right: 20px;
 }
 
-.mid-container-1 {
+.mid-container-1,
+.mid-container-2 {
     display: flex;
     justify-content: center;
     align-items: center;
     gap: 40px;
     font-size: 20px;
     margin-bottom: 20px;
+}
+
+.mid-container-2 {
+    padding: 6vh;
 }
 
 .address-phone {
@@ -91,13 +96,17 @@ body {
     }
 }
 
+.bounce,
+.page-selections {
+    text-decoration: none;
+    color: black;
+}
+
 .bounce {
+    -webkit-animation: bounce 0.75s infinite;
     font-size: 50px;
     background-color: transparent;
     border: none;
-    text-decoration: none;
-    color: black;
-    -webkit-animation: bounce 0.75s infinite;
 }
 
 .logo {
@@ -106,7 +115,8 @@ body {
     margin-right: 7vw;
 }
 
-.menu-box {
+.menu-box,
+.hookah-box {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -120,12 +130,14 @@ body {
     gap: 3vh;
 }
 
-.our-menus {
+.our-menus,
+.hookah-lounge {
     font-size: 35px;
     margin-top: 6vh;
 }
 
-.menu-image {
+.menu-image,
+.hookah-image {
     background-color: black;
     width: 43vw;
     height: 43vw;
@@ -135,12 +147,19 @@ body {
     border-radius: 20px;
 }
 
-.menu-image-and-box {
+.menu-image-and-box,
+.hookah-image-and-box {
     display: flex;
     justify-content: space-evenly;
-    margin-top: 8vh;
-    margin-bottom: 6vh;
+    margin-top: 4vh;
+    margin-bottom: 5vh;
     gap: 4vw;
+}
+
+#destination-1,
+#destination-2,
+#destination-3 {
+    padding-top: 10vh;
 }
 
 .view-menu {
@@ -152,4 +171,8 @@ body {
     padding: 10px;
     padding-left: 20px;
     padding-right: 20px;
+}
+
+.para-2 {
+    padding-top: 6vh;
 }
