--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,9 @@ body {
     flex-direction: column;
     align-items: center;
     padding: 5px;
+    border-color: black;
+    border-width: 3px;
+    border-style: solid;
     border-radius: 20px;
     position: absolute;
     overflow: scroll;
@@ -48,7 +51,8 @@ body {
 }
 
 .mid-container-2 {
-    padding: 6vh;
+    padding-top: 6vh;
+    font-size: 35px;
 }
 
 .address-phone {
@@ -175,4 +179,22 @@ body {
 
 .para-2 {
     padding-top: 6vh;
+}
+
+.bold {
+    font-weight: 900;
+}
+
+p {
+    text-align: center;
+}
+
+.hours-sect {
+    border-color: #222;
+    border-width: 2px;
+    border-style: solid;
+    border-radius: 20px;
+    padding: 2vw;
+    padding-left: 6vw;
+    padding-right: 6vw;
 }
