--- a/styles.css
+++ b/styles.css
@@ -198,3 +198,9 @@ p {
     padding-left: 6vw;
     padding-right: 6vw;
 }
+
+.our-story-sect {
+    background-color: #222;
+    width: 75vw;
+    height: 50vh;
+}
