--- a/styles.css
+++ b/styles.css
@@ -132,6 +132,8 @@ body {
     border-radius: 20px;
     padding: 5vw;
     gap: 3vh;
+    box-shadow: 0px 3px 10px;
+
 }
 
 .our-menus,
@@ -149,6 +151,7 @@ body {
     border-width: 2px;
     border-style: solid;
     border-radius: 20px;
+    box-shadow: 0px 3px 10px;
 }
 
 .menu-image-and-box,
@@ -185,8 +188,16 @@ body {
     font-weight: 900;
 }
 
-p {
+p,
+.our-story {
     text-align: center;
+}
+
+.hours-area {
+    display: flex;
+    flex-direction: row;
+    gap: 4vw;
+    margin-top: 13vh;
 }
 
 .hours-sect {
@@ -197,10 +208,34 @@ p {
     padding: 2vw;
     padding-left: 6vw;
     padding-right: 6vw;
+    height: 34vh;
+    box-shadow: 0px 3px 10px;
+
+}
+
+.hours-pic-left,
+.hours-pic-right {
+    background-color: black;
+    width: 27vw;
+    height: 40vw;
+    border-color: #222;
+    border-width: 2px;
+    border-style: solid;
+    border-radius: 20px;
+    box-shadow: 0px 3px 10px;
+
 }
 
 .our-story-sect {
     background-color: #222;
     width: 75vw;
-    height: 50vh;
+    margin: 15vh;
+    border-radius: 20px;
+    padding: 5vw;
+    color: #fffff4;
 }
+
+.our-story {
+    font-size: 35px;
+}
+
