--- a/styles.css
+++ b/styles.css
@@ -15,9 +15,7 @@ body {
     flex-direction: column;
     align-items: center;
     padding: 5px;
-    border-color: black;
-    border-width: 3px;
-    border-style: solid;
+    border: 3px solid black;
     border-radius: 20px;
     position: absolute;
     overflow: scroll;
@@ -32,12 +30,8 @@ body {
 }
 
 .menu {
-    border-color: #222;
-    border-width: 2px;
-    border-style: solid;
-    padding: 5px;
-    padding-left: 20px;
-    padding-right: 20px;
+    border: 2px solid #222;
+    padding: 5px 20px;
 }
 
 .mid-container-1,
@@ -62,8 +56,7 @@ body {
     gap: 20px;
     font-size: 14px;
     color: #222;
-    margin-top: 2px;
-    margin-bottom: 0px;
+    margin: 2px 0 0;
 }
 
 .black-border {
@@ -87,16 +80,11 @@ body {
 }
 
 @-webkit-keyframes bounce {
-    0% {
-    transform: translate(0px, 0px);
+    0%, 100% {
+        transform: translate(0px, 0px);
     }
-
-    25%{
-    transform: translate(0px, 10px); 
-    }
-
-    100% {
-    transform: translate(0px, 0px);
+    25% {
+        transform: translate(0px, 10px); 
     }
 }
 
@@ -126,14 +114,11 @@ body {
     align-items: center;
     width: 33vw;
     height: 33vw;
-    border-color: #222;
-    border-width: 2px;
-    border-style: solid;
+    border: 2px solid #222;
     border-radius: 20px;
     padding: 5vw;
     gap: 3vh;
     box-shadow: 0px 3px 10px;
-
 }
 
 .our-menus,
@@ -147,9 +132,7 @@ body {
     background-color: black;
     width: 43vw;
     height: 43vw;
-    border-color: #222;
-    border-width: 2px;
-    border-style: solid;
+    border: 2px solid #222;
     border-radius: 20px;
     box-shadow: 0px 3px 10px;
 }
@@ -158,26 +141,22 @@ body {
 .hookah-image-and-box {
     display: flex;
     justify-content: space-evenly;
-    margin-top: 4vh;
-    margin-bottom: 5vh;
+    margin: 4vh 0 5vh;
     gap: 4vw;
 }
 
 #destination-1,
 #destination-2,
-#destination-3 {
+#destination-3,
+#destination-4 {
     padding-top: 10vh;
 }
 
 .view-menu {
     background-color: transparent;
     font-family: 'Lugrasimo', cursive;
-    border-color: #222;
-    border-width: 2px;
-    border-style: solid;
-    padding: 10px;
-    padding-left: 20px;
-    padding-right: 20px;
+    border: 2px solid #222;
+    padding: 10px 20px;
 }
 
 .para-2 {
@@ -201,16 +180,11 @@ p,
 }
 
 .hours-sect {
-    border-color: #222;
-    border-width: 2px;
-    border-style: solid;
+    border: 2px solid #222;
     border-radius: 20px;
-    padding: 2vw;
-    padding-left: 6vw;
-    padding-right: 6vw;
+    padding: 2vw 6vw;
     height: 34vh;
     box-shadow: 0px 3px 10px;
-
 }
 
 .hours-pic-left,
@@ -218,12 +192,9 @@ p,
     background-color: black;
     width: 27vw;
     height: 40vw;
-    border-color: #222;
-    border-width: 2px;
-    border-style: solid;
+    border: 2px solid #222;
     border-radius: 20px;
     box-shadow: 0px 3px 10px;
-
 }
 
 .our-story-sect {
@@ -239,3 +210,5 @@ p,
     font-size: 35px;
 }
 
+/* Next step is to correct the link to the hours sect of page, and maybe change the class names 
+for the grocery sect so that their not still copy and paste from menu sect
